# ain-hire

./: .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
ain_hire/: __init__.py  agent.py  config.py  report.py  schema.py  scoring.py  storage.py  voice.py
ain_hire/interview/: __init__.py  content.py  state_machine.py
ddl/: bigquery.sql
ioh_hire/: __init__.py  agent.py  config.py  report.py  schema.py  scoring.py  storage.py  voice.py
ioh_hire/interview/: content.py  state_machine.py
scripts/: deploy_agent_engine.py  seed_demo.py
tests/: test_schema.py  test_state_machine.py
